--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.3",
+    "framer-motion": "^7.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
