--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.3",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "framer-motion": "^7.1.0",
+    "js-cookie": "^3.0.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.8",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
