--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.3",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/mongoose": "^5.11.97",
     "axios": "^0.27.2",
     "framer-motion": "^7.1.0",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.5.2",
     "next": "12.2.3",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
@@ -28,12 +31,16 @@
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "jsonwebtoken": "^8.5.1",
     "sass": "^1.54.0",
     "typescript": "4.7.4"
   }
