--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.5.2",
     "next": "12.2.3",
     "next-connect": "^0.13.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
